<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".Activity_login" >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="203dp"
        android:layout_height="189dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edt_usuario_login"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <EditText
        android:id="@+id/edt_contra_login"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="145dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_entrar_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario_login" />

    <TextView
        android:id="@+id/txt_olvido_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="110dp"
        android:text="@string/has_olvidado_la_contrasena"
        android:textColor="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_entrar_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_contra_login" />

    <ImageButton
        android:id="@+id/ibtn_entrar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:background="@drawable/fondo_boton"
        android:contentDescription="@string/boton_entrar"
        android:onClick="doLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintVertical_bias="0.786"
        app:srcCompat="@drawable/boton_entra" />




</androidx.constraintlayout.widget.ConstraintLayout>