...
        android:id="@+id/txt_titulo_menu_chef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_menu_chef"
        android:textColor="@color/titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imb_gestion_perfil_chef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
...
